  no longer default to toggling the inputs. The value is dependent on the
  toggle and mask provided by the user.
  **You now have to manually specify the toggle and mask if you want the bits
  negated/masked.**
- `pifacecommon.interrupts.enable_interrupts` can be given a pin mask and a
  list of board numbers to enable the interrupts rather than just enabling all
  interrupts on all boards.


v3.1.1
------
- Added IODIR_FALLING_EDGE and IODIR_RISING_EDGE to replace IODIR_ON and
  IODIR_OFF respectively. IODIR_ON and IODIR_OFF can still be used in the same
  way as before. Falling/Rising Edge are for physical level 1/0, On/Off are for
  logical (programmer) level 1/0.

    Physical Level (pifacecommon.read_bit):
        IODIR_FALLING_EDGE: 1 -> 0
        IODIR_RISING_EDGE: 0 -> 1
    Logical Level (pifacedigitalio.PiFaceDigital().input_pins[0].value):
        IODIR_ON: 0 -> 1
        IODIR_OFF: 1 -> 0

    Remember that PiFace Digital Inputs are active low:
        >>> pifacecommon.read_bit(0, INPUT_PORT)
        >>> 1  # physical
        >>> pifacedigitalio.PiFaceDigital().input_pins[0].value
        >>> 0  # logical

- Fixed Debian package bug where setup script would not be executed.

v3.1.0
------
- Added debouncing with adjustable `settle time`.

v3.0.0
------
- Added timeout class (fixing Issue #2) in interrupts.
- Added support for interrupts on multiple boards.
- Interrupts must be enabled/disabled manually. Automatic handling of this
  broke interrupts from multiple boards.

v2.0.2
------
- Moved version number to pifacecommon/version.py so that it can be read from
  setup.py and bin/uninstall.py.
- Updated SPI help link to point to the new docs.
- Moved installation scripts into single file for Debian packaging.

v2.0.1
------
- Added version number in source.
- Added uninstall script.

v2.0.0
------
- Improved interrupts (different API, check the docs).
- Reduced scope of global variables from package to individual modules.